// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MegaKino handle imdb baymax 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://megakino.ms/films/693-baymax-riesiges-robowabohu.html",
      "title": "Baymax - Riesiges Robowabohu",
    },
    "url": "https://voe.sx/e/8doq7gwiwtig",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://megakino.ms/films/693-baymax-riesiges-robowabohu.html",
      "title": "Baymax - Riesiges Robowabohu",
    },
    "url": "https://watch.gxplayer.xyz/watch?v=MEKI92PU",
  },
]
`;

exports[`MegaKino lego movie 2 2019 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://megakino.ms/adventure/4804-the-lego-movie-2.html",
      "title": "The LEGO Movie 2",
    },
    "url": "https://voe.sx/e/gkd0hqdinrex",
  },
]
`;

exports[`MegaKino lego movie 2014 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://megakino.ms/films/727-the-lego-movie.html",
      "title": "The Lego Movie",
    },
    "url": "https://voe.sx/e/9ln9fmz2pgru",
  },
  {
    "meta": {
      "countryCodes": [
        "de",
      ],
      "referer": "https://megakino.ms/films/727-the-lego-movie.html",
      "title": "The Lego Movie",
    },
    "url": "https://watch.gxplayer.xyz/watch?v=XE0LK8H7",
  },
]
`;
